[gd_scene load_steps=8 format=3 uid="uid://dpep4gsqynhla"]

[ext_resource type="Theme" uid="uid://3d1vsjlnhej3" path="res://GUI/pause_theme.tres" id="1_5c2d5"]
[ext_resource type="Script" path="res://Scences_script/MainMenu.gd" id="1_hmb4i"]
[ext_resource type="Script" path="res://GUI/quit_button.gd" id="3_ay5pb"]
[ext_resource type="Script" path="res://GUI/start_button.gd" id="5_jwj1b"]
[ext_resource type="Texture2D" uid="uid://ckye7vutacjre" path="res://空间的救赎logo2.png" id="5_ldelr"]
[ext_resource type="Script" path="res://GUI/mine_title_label.gd" id="6_e70bh"]

[sub_resource type="LabelSettings" id="LabelSettings_h816k"]
font_size = 24

[node name="MainMenu" type="Control"]
process_mode = 3
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_5c2d5")
script = ExtResource("1_hmb4i")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = -780.0
offset_top = -94.0
offset_right = -442.0
offset_bottom = 41.0
scale = Vector2(0.793398, 0.793398)
text = "新的旅程"
script = ExtResource("5_jwj1b")

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = -781.0
offset_top = 14.0
offset_right = -440.0
offset_bottom = 160.0
scale = Vector2(0.794613, 0.794613)
disabled = true
text = "继续探索"

[node name="SettingButton" type="Button" parent="."]
layout_mode = 0
offset_left = -780.0
offset_top = 131.0
offset_right = -441.0
offset_bottom = 270.0
scale = Vector2(0.793707, 0.793707)
text = "选项设置"
script = ExtResource("5_jwj1b")

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = -781.0
offset_top = 243.0
offset_right = -440.0
offset_bottom = 389.0
scale = Vector2(0.795477, 0.795477)
text = "返回现实"
script = ExtResource("3_ay5pb")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, 0)
zoom = Vector2(1.065, 1.065)

[node name="logo" type="Sprite2D" parent="."]
position = Vector2(-450.033, -315.249)
scale = Vector2(0.352587, 0.362732)
texture = ExtResource("5_ldelr")
script = ExtResource("6_e70bh")

[node name="版本提示" type="Label" parent="."]
layout_mode = 0
offset_left = -514.033
offset_top = -202.249
offset_right = -149.033
offset_bottom = -177.249
text = "内测第一版"
label_settings = SubResource("LabelSettings_h816k")

[node name="版本" type="Label" parent="."]
layout_mode = 0
offset_left = 389.0
offset_top = 471.0
offset_right = 896.0
offset_bottom = 496.0
text = "Version:Non_distribution_1.1.52+250723-Beta.1"
label_settings = SubResource("LabelSettings_h816k")
